--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -614,6 +614,7 @@
     <string name="tip_booklist_styles_editor">Χρησιμοποιήστε αυτήν την οθόνη για να προσαρμόσετε τη λίστα των στυλ που θα εμφανίζονται στο προεπιλεγμένο μενού στυλ. Χρησιμοποιήστε το πλαίσιο ελέγχου για να επιλέξετε ποια στυλ θα εμφανίζονται στη λίστα.  Εάν δεν έχει επιλεγεί κανένα στυλ, τότε θα εμφανιστούν όλα τα στυλ. Μπορείτε να αναδιατάξετε την ιεραρχία σύροντας το εικονίδιο στο άκρο δεξιά κάθε σειράς προς τα πάνω ή προς τα κάτω. Πατώντας παρατεταμένα οπουδήποτε αλλού σε μια σειρά, θα μπορέσετε να επεξεργαστείτε ή να κλωνοποιήσετε τις λεπτομέρειες ενός συγκεκριμένου στυλ. Αν κλωνοποιήσατε ένα στυλ και αλλάξατε γνώμη, θα πρέπει να το διαγράψετε μόνοι σας.</string>
     <string name="tip_dialog_title">Συμβουλή</string>
     <string name="tip_reset_all">Επαναφορά συμβουλών</string>
+    <string name="site_description_german_catalogue">Γερμανικά; Κατάλογος</string>
     <string name="tip_reset_done">Οι Συμβουλές έχουν επαναφερθεί</string>
     <string name="tip_series_book_may_appear_more_than_once">Εάν τα βιβλία εμφανίζονται σε όλες τις σειρές στις οποίες ανήκει το βιβλίο, ενδέχεται να εμφανίζονται πολλές φορές στη λίστα. Η διαγραφή ενός από αυτά τα βιβλία έχει ως αποτέλεσμα την αφαίρεση όλων των αντιτύπων από τη λίστα.</string>
     <string name="tip_update_fields_from_internet">Οι εξωτερικοί σύνδεσμοι ιστότοπου υποβάλλονται σε επεξεργασία μόνο αν ο ιστότοπος επικοινωνεί πραγματικά. Ως εκ τούτου, το μενού «Προβολή στο…» θα δείξει και ό, τι είναι διαθέσιμο.</string>
