--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -625,6 +625,7 @@
     <string name="tip_booklist_styles_editor">С помощью этого экрана можно настроить список стилей, который будет отображаться в меню стилей по умолчанию. С помощью флажка можно выбрать, какие стили будут отображаться в списке.  Если ни один из стилей не выбран, то будут показаны все стили. Вы можете изменить порядок иерархии, перетащив значок в крайнем правом углу каждой строки вверх или вниз. Длительное нажатие в любом другом месте ряда позволяет редактировать или клонировать детали конкретного стиля. Если вы клонировали стиль, но передумали, вам придется удалить его самостоятельно.</string>
     <string name="tip_dialog_title">Подсказка</string>
     <string name="tip_reset_all">Сбросить подсказки</string>
+    <string name="site_description_german_catalogue">Немецкий язык; Каталог</string>
     <string name="tip_reset_done">Подсказки сброшены</string>
     <string name="tip_series_book_may_appear_more_than_once">Если книги показаны во всех сериях, к которым принадлежит книга, они могут появляться в списке несколько раз. Удаление одной из таких книг приводит к удалению всех копий из списка.</string>
     <string name="tip_update_fields_from_internet">Ссылки на внешние сайты обрабатываются только в том случае, если сайт действительно связался. В результате меню «Смотреть на…» также будет показывать только то, что доступно.</string>
