--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -648,6 +648,7 @@
     <string name="tip_dialog_title">Aanwijzing</string>
     <string name="tip_import_isbn_list">Importeer een tekstbestand met ISBN-nummers. Het bestand moet op elke regel één enkel ISBN-nummer hebben. De resultaten worden in de wachtrij geplaatst.</string>
     <string name="tip_reset_all">Herstel aanwijzingen</string>
+    <string name="site_description_german_catalogue">Duits; Catalogus</string>
     <string name="tip_reset_done">Aanwijzingen zijn hersteld</string>
     <string name="tip_series_book_may_appear_more_than_once">Als boeken worden getoond in alle series waartoe het boek behoort, kunnen ze meerdere keren voorkomen in de lijst. Het verwijderen van een van die boeken heeft tot gevolg dat alle exemplaren uit de lijst worden verwijderd.</string>
     <string name="tip_update_fields_from_internet">Externe sitekoppelingen worden alleen verwerkt als er daadwerkelijk contact met de site wordt gemaakt. Als gevolg hiervan zal het menu „Bekijk op…” eveneens alleen weergeven wat beschikbaar is.</string>
