--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -629,6 +629,7 @@
     <string name="tip_booklist_styles_editor">Ten ekran służy do dostosowywania listy stylów, które będą wyświetlane w domyślnym menu stylów. Użyj pola wyboru, aby wybrać style, które będą wyświetlane na liście.  Jeśli nie zostaną wybrane żadne style, wyświetlone zostaną wszystkie style. Hierarchię można zmienić, przeciągając ikonę po prawej stronie każdego wiersza w górę lub w dół. Długie naciśnięcie dowolnego miejsca w rzędzie umożliwia edycję lub klonowanie szczegółów określonego stylu. Jeśli sklonowałeś styl i zmieniłeś zdanie, będziesz musiał go usunąć.</string>
     <string name="tip_dialog_title">Wskazówka</string>
     <string name="tip_reset_all">Zresetuj wskazówki</string>
+    <string name="site_description_german_catalogue">Niemiecki; Katalog</string>
     <string name="tip_reset_done">Wskazówki zostały zresetowane</string>
     <string name="tip_series_book_may_appear_more_than_once">Jeśli książki są pokazywane we wszystkich seriach, do których należy dana książka, mogą pojawić się na liście wielokrotnie. Usunięcie jednej z tych książek ma skutek usunięcia wszystkich egzemplarzy z listy.</string>
     <string name="tip_update_fields_from_internet">Linki do zewnętrznych stron są przetwarzane tylko wtedy, gdy rzeczywiście nawiązano kontakt ze stroną. W rezultacie menu „Widok na……” pokaże tylko to, co jest dostępne.</string>
