--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -376,9 +376,11 @@
     <string name="site_description_dutch_catalogue_eu_comics">Dutch and more; Catalogue; European Comics</string>
     <!-- website info: languages; type; specifics. -->
     <string name="site_description_dutch_shopping">Dutch and more; Shop</string>
+    <!-- website info: languages; type; specifics. -->
     <string name="site_description_dutch_comics_shopping">Dutch and more; Comics; Shop</string>
     <!-- website info: languages; type; specifics. -->
     <string name="site_description_english_catalogue">English and more; Catalogue</string>
+    <!-- website info: languages; type; specifics. -->
     <string name="site_description_german_catalogue">German; Catalogue</string>
     <!-- website info: languages; type; specifics. -->
     <string name="site_description_english_catalogue_FSF">English and more; Catalogue; Fantasy and Science Fiction</string>
