--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -718,6 +718,7 @@
     <string name="site_description_dutch_catalogue_eu_comics">Niederländisch und mehr; Katalog; Europäische Comics</string>
     <string name="site_description_dutch_shopping">Niederländisch und mehr; Einkaufen</string>
     <string name="site_description_english_catalogue">Englisch und mehr; Katalog</string>
+    <string name="site_description_chinese_catalogue">Chinesisch; Katalog</string>
     <string name="site_description_english_catalogue_FSF">Englisch und mehr; Katalog; Fantasy und Science Fiction</string>
     <string name="site_description_french_catalogue_eu_comics">Französisch und mehr; Katalog; Europäische Comics</string>
     <string name="site_description_general_shopping">Allgemein; Einkaufen</string>
@@ -786,4 +787,8 @@
     <string name="pe_ui_theme_colors_blue_grey">Blau-grau</string>
     <string name="pe_ui_theme_colors_dynamic">Dynamische Farben</string>
     <string name="warning_requires_android_x">Erfordert Android %1$d oder höher</string>
+    <string name="anonymous_author">[Anonym]</string>
+    <string name="pt_search_result_order">Die Suche gibt das letzte oder das erste gefundene Buch zurück</string>
+    <string name="pe_search_result_order_most_recent">Letztes gefundenes Buch</string>
+    <string name="pe_search_result_order_first_found">Erstes gefundenes Buch</string>
 </resources>
