--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -784,7 +784,7 @@
     <string name="pe_ui_theme_colors_dynamic">Δυναμικά χρώματα</string>
     <string name="warning_requires_android_x">Απαιτεί Android %1$d ή νεότερη έκδοση</string>
     <string name="anonymous_author">[Ανώνυμος]</string>
-    <string name="pt_search_result_order">Οι αναζητήσεις επιστρέφουν το πιο πρόσφατο βιβλίο ή το πρώτο που βρέθηκε</string>
+    <string name="pt_search_result_order">Οι αναζητήσεις επιστρέφουν το πιο πρόσφατο βιβλίο ή το πρώτο που βρέθηκε.</string>
     <string name="pe_search_result_order_most_recent">Βρέθηκε το πιο πρόσφατο βιβλίο</string>
     <string name="pe_search_result_order_first_found">Πρώτο βιβλίο που βρέθηκε</string>
 </resources>
