--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -787,7 +787,7 @@
     <string name="pe_ui_theme_colors_dynamic">Colori dinamici</string>
     <string name="warning_requires_android_x">Richiede Android %1$d o superiore</string>
     <string name="anonymous_author">[Anonimo]</string>
-    <string name="pt_search_result_order">Le ricerche restituiscono il libro più recente o il primo trovato</string>
+    <string name="pt_search_result_order">Le ricerche restituiscono il libro più recente o il primo trovato.</string>
     <string name="pe_search_result_order_most_recent">Libro più recente trovato</string>
     <string name="pe_search_result_order_first_found">Primo libro trovato</string>
 </resources>
